src/main/java/com/example/DiplomaSite/error/DefenseResultNotFoundException.java
package com.example.DiplomaSite.error;

public class DefenseResultNotFoundException extends RuntimeException{
    public DefenseResultNotFoundException(String message) {
        super(message);
    }
}
